src/objects/Feature__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Release_Date__c</fullName>
        <formula>Release__r.Actual_Release_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affected_Field_s__c</fullName>
        <label>Affected Field(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Field 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field 5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Affected_Object__c</fullName>
        <inlineHelpText>Select the objects that your feature affects. If you don&apos;t know them all, please select the one or more you do know.</inlineHelpText>
        <label>Affected Object(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acct Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affected Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIF Approval Matrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIF Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIF Matrix Statuses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIF_Device_App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Manager Selection Matrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attendees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available Application Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carousel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Models</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Source Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor to Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor to Contact</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this checkbox is checked via the approval process on approval.</description>
        <inlineHelpText>this checkbox is checked via the approval process on approval.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Person_Email_Format__c</fullName>
        <label>Assigned To Person Email - Format</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The name of the individual (user) who is working to implement this feature</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Features1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Can_be_completed_by_External_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can be completed by External Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments_Updates__c</fullName>
        <inlineHelpText>Use this field to leave comments or update the status of this feature</inlineHelpText>
        <label>Comments/Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed_Solution__c</fullName>
        <label>Confirmed Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Database_Affected__c</fullName>
        <label>Database(s) Affected</label>
        <picklist>
            <picklistValues>
                <fullName>AP (Account Payable)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appaloosa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ariba Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractrequest.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRIS (Cost Reduction Information System)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDW (Data Warehouse)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMDB (Feature Management Database)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPPD (Global Product Portfolio Database)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMARC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithium (MOTODEV Community Database)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCIS (Oracle)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microgen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MotoDev Site (Central Database)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOTODEV Studio Updates DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MotoPDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPI (New Product Introduction)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RightNOW CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tigers Payments</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Enter a description of the feature so we can better understand the exact need and can help resolve it.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_User_Testing_Status__c</fullName>
        <label>End User Testing Status</label>
        <picklist>
            <controllingField>Implementation_Status__c</controllingField>
            <picklistValues>
                <fullName>Tested - Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tested - Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Workload__c</fullName>
        <inlineHelpText>Estimated work days it will require to complete the requested feature</inlineHelpText>
        <label>Estimated Workload (work days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <displayFormat>FR{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Feature #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Group_Queue__c</fullName>
        <label>Group Queue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <label>Implementation Status</label>
        <picklist>
            <picklistValues>
                <fullName>New - Unassigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require More Information/Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Internal Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for User Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changes Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed to Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Old_Phase__c</fullName>
        <description>The Phase value prior to the current Phase.</description>
        <inlineHelpText>The Phase value prior to the current Phase.</inlineHelpText>
        <label>Old Phase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Queue__c</fullName>
        <inlineHelpText>This is the running queue of the order of features. Several items can be worked on simutaneously if the status of each shows In Progress.</inlineHelpText>
        <label>Overall Queue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Hidden__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Hidden</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Completed__c</fullName>
        <label>Percent Completed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phase_1_Duration__c</fullName>
        <formula>IF( ISNULL(  Phase_1_Requested_Date_del__c  ) , null,  Phase_1_Requested_Date_del__c  - DATEVALUE(CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 1 Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase_1_Requested_Date_del__c</fullName>
        <inlineHelpText>Please enter the date Phase 1 was COMPLETED</inlineHelpText>
        <label>Phase 1 - Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_2_Approved_Date__c</fullName>
        <inlineHelpText>Please enter the date Phase 2 was COMPLETED</inlineHelpText>
        <label>Phase 2 - Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_2_Duration__c</fullName>
        <formula>IF( ISNULL(  Phase_2_Approved_Date__c ) , null,  Phase_2_Approved_Date__c -   Phase_1_Requested_Date_del__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an automatically generated field. This subtracts the Phase 2 Date Completed from the Phase 1 Date Completed to calculate how long this feature was in Phase 2.</inlineHelpText>
        <label>Phase 2 Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase_3_Duration__c</fullName>
        <formula>IF( ISNULL(  Phase_3_Review_Board_Date__c  ) , null,  Phase_3_Review_Board_Date__c  -  Phase_2_Approved_Date__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 3 Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase_3_Review_Board_Date__c</fullName>
        <formula>Review_Board_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This date is pulled automatically from the Review Board Date below. This is automatically generated. If this feature does not go through the Board, this will be left blank.</inlineHelpText>
        <label>Phase 3 - Review Board Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_4_Solution_Decision_Date__c</fullName>
        <inlineHelpText>Please enter the date Phase 4 was COMPLETED</inlineHelpText>
        <label>Phase 4 - Solution/Decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_5_Completion_Date__c</fullName>
        <inlineHelpText>Please enter the date Phase 5 was COMPLETED</inlineHelpText>
        <label>Phase 5 - Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Request Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Review Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>1) High - This is a critical feature/ Severe impact on daily business operations 
2) Medium - This is an important feature/ Moderate impact on daily business operations 
3) Low - This feature would be helpful/ Slight impact on daily business operations</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Release_Date__c</fullName>
        <formula>Release__r.Projected_Release_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Status__c</fullName>
        <formula>TEXT(Release__r.Release_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Feature_Release__c</referenceTo>
        <relationshipLabel>Features Included in Release</relationshipLabel>
        <relationshipName>Features_Included_in_Release</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Completion_Date__c</fullName>
        <label>Requested Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Group_Owner_Email_Format__c</fullName>
        <label>Requested Group Owner Email - Format</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requested_Group_Owner_Email__c</fullName>
        <formula>Requested_Group__r.Feature_Group_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Group Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Group_Owner__c</fullName>
        <formula>Requested_Group__r.Feature_Group_Owner__r.FirstName &amp; &quot; &quot; &amp;  Requested_Group__r.Feature_Group_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Group Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested Group</label>
        <referenceTo>Feature_Group__c</referenceTo>
        <relationshipLabel>Requested Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Method__c</fullName>
        <inlineHelpText>What type of resolution method will be needed to complete this feature request? Will new objects, fields, etc need to be created? Will a brand new Process need to be established or does an existing one need to be streamlined?</inlineHelpText>
        <label>Resolution Method</label>
        <picklist>
            <picklistValues>
                <fullName>New Object(s) Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Field(s) Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revaluate Existing Process</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Sub_Type__c</fullName>
        <label>Resolution Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Informatica On Demand (IOD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API Code Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Type__c</fullName>
        <inlineHelpText>How can this feature be resolved? Can we do it with Out of the Box capability within Salesforce or will custom APEX code be needed to achieve a resolution?</inlineHelpText>
        <label>Resolution Type</label>
        <picklist>
            <picklistValues>
                <fullName>SF Out of Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APEX Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Exchange Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Board_Date__c</fullName>
        <label>Review Board Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Board_Status__c</fullName>
        <label>Review Board Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_to_Reproduce__c</fullName>
        <label>Step to Reproduce</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Testing_Rejection_Notes__c</fullName>
        <inlineHelpText>Please enter details if you have rejected a feature</inlineHelpText>
        <label>Testing Rejection Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Please select the type of feature this is. If a current functionality is not working as intented, please specific a Bug. If any feature if being requested that currently does not exist and would add functionality in any way, please mark &quot;Enhancement&quot;</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Feature</label>
    <listViews>
        <fullName>All_Open_Features</fullName>
        <columns>Requested_Group__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>Group_Queue__c</columns>
        <columns>Overall_Queue__c</columns>
        <columns>Estimated_Workload__c</columns>
        <columns>Can_be_completed_by_External_Resources__c</columns>
        <columns>Phase__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>notContain</operation>
            <value>Deployed,Closed - Verified,Closed - Rejected</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Hanson</value>
        </filters>
        <label>All Open Features</label>
        <sharedTo>
            <group>MotoDevAdmins</group>
            <group>MotoDevECOSYSPARTNERMGMT</group>
            <group>MotoDevECOSYSTEM</group>
            <group>MotoDevPARTNERMGMT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BCC</fullName>
        <columns>Overall_Queue__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Resolution_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>rose</value>
        </filters>
        <label>BCC</label>
        <sharedTo>
            <roleAndSubordinatesInternal>MotoDevAdmin</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MotoDevBusOpsAdmin</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MotoDevDirector</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MotoDevExecutiveCLevel</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MotoDevExecutiveSVP</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MotoDevExecutiveVP</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MotoDevManager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MotoDevSrDirector</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MotoDevSrManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bugs</fullName>
        <columns>Feature__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Requested_Group__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Implementation_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Bug</value>
        </filters>
        <filters>
            <field>Phase__c</field>
            <operation>notContain</operation>
            <value>Closed - Verified,Closed - Rejected</value>
        </filters>
        <label>Bugs</label>
        <sharedTo>
            <group>MotoDevAdmins</group>
            <group>MotoDevECOSYSPARTNERMGMT</group>
            <group>MotoDevECOSYSTEM</group>
            <group>MotoDevPARTNERMGMT</group>
            <group>MotoDev_BigKite</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Operations</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Group_Queue__c</columns>
        <columns>Priority__c</columns>
        <columns>Overall_Queue__c</columns>
        <columns>Estimated_Workload__c</columns>
        <columns>Phase__c</columns>
        <columns>Requested_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requested_Group__c</field>
            <operation>equals</operation>
            <value>Business Operations</value>
        </filters>
        <filters>
            <field>Phase__c</field>
            <operation>notContain</operation>
            <value>Closed - Verified,Closed - Rejected,Deployed</value>
        </filters>
        <label>Business Operations</label>
        <sharedTo>
            <group>MotoDevAdmins</group>
            <group>MotoDevECOSYSPARTNERMGMT</group>
            <group>MotoDevECOSYSTEM</group>
            <group>MotoDevPARTNERMGMT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>China</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>Group_Queue__c</columns>
        <columns>Overall_Queue__c</columns>
        <columns>Estimated_Workload__c</columns>
        <columns>Requested_Completion_Date__c</columns>
        <columns>Phase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requested_Group__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <filters>
            <field>Phase__c</field>
            <operation>notEqual</operation>
            <value>5) Completed,DROPPED</value>
        </filters>
        <label>China</label>
        <sharedTo>
            <group>MotoDevAdmins</group>
            <group>MotoDevECOSYSPARTNERMGMT</group>
            <group>MotoDevECOSYSTEM</group>
            <group>MotoDevPARTNERMGMT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Compliance</fullName>
        <columns>Feature__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Phase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requested_Group__c</field>
            <operation>equals</operation>
            <value>Compliance</value>
        </filters>
        <filters>
            <field>Phase__c</field>
            <operation>notContain</operation>
            <value>Closed - Verified,Closed - Rejected</value>
        </filters>
        <label>Compliance</label>
        <sharedTo>
            <group>MotoDevAdmins</group>
            <group>MotoDevECOSYSPARTNERMGMT</group>
            <group>MotoDevECOSYSTEM</group>
            <group>MotoDevLegalCarrierIndemnities</group>
            <group>MotoDevPARTNERMGMT</group>
            <group>MotoDev_BigKite</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Developer_Features</fullName>
        <columns>Feature__c</columns>
        <columns>Requested_Group__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Implementation_Status__c</columns>
        <columns>Comments_Updates__c</columns>
        <columns>Percent_Completed__c</columns>
        <columns>Phase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Tom,Rajesh,bigkite,Bineet Mishra</value>
        </filters>
        <filters>
            <field>Phase__c</field>
            <operation>notContain</operation>
            <value>Deployed,Closed - Rejected</value>
        </filters>
        <label>Developer Features</label>
        <sharedTo>
            <group>MotoDevAdmins</group>
            <group>MotoDevECOSYSPARTNERMGMT</group>
            <group>MotoDevECOSYSTEM</group>
            <group>MotoDevLegalCarrierIndemnities</group>
            <group>MotoDevPARTNERMGMT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ecosystem_Marketing</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>Group_Queue__c</columns>
        <columns>Overall_Queue__c</columns>
        <columns>Estimated_Workload__c</columns>
        <columns>Requested_Completion_Date__c</columns>
        <columns>Phase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requested_Group__c</field>
            <operation>equals</operation>
            <value>Ecosystem/Marketing</value>
        </filters>
        <filters>
            <field>Phase__c</field>
            <operation>notEqual</operation>
            <value>5) Completed,DROPPED</value>
        </filters>
        <label>Ecosystem/Marketing</label>
        <sharedTo>
            <group>MotoDevAdmins</group>
            <group>MotoDevECOSYSPARTNERMGMT</group>
            <group>MotoDevECOSYSTEM</group>
            <group>MotoDevPARTNERMGMT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Features_to_Deploy</fullName>
        <columns>Requested_Group__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>Group_Queue__c</columns>
        <columns>Overall_Queue__c</columns>
        <columns>Estimated_Workload__c</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>Can_be_completed_by_External_Resources__c</columns>
        <columns>Phase__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Approved - Ready for Deployment</value>
        </filters>
        <label>Features to Deploy</label>
        <sharedTo>
            <group>MotoDev_BigKite</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>Group_Queue__c</columns>
        <columns>Overall_Queue__c</columns>
        <columns>Estimated_Workload__c</columns>
        <columns>Requested_Completion_Date__c</columns>
        <columns>Phase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requested_Group__c</field>
            <operation>equals</operation>
            <value>Finance</value>
        </filters>
        <filters>
            <field>Phase__c</field>
            <operation>notEqual</operation>
            <value>5) Completed,DROPPED</value>
        </filters>
        <label>Finance</label>
        <sharedTo>
            <group>MotoDevAdmins</group>
            <group>MotoDevECOSYSPARTNERMGMT</group>
            <group>MotoDevECOSYSTEM</group>
            <group>MotoDevPARTNERMGMT</group>
        </sharedTo>
    </listViews>
</CustomObject>